# python-project-structure

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
src/example_app/: app.py
